--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>JS Bin</title>
+    <title>float布局</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
