三栏布局清除浮动

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </ul>
     </header>
 
-    <div class="content">
+    <div class="content clearfix">
       <aside></aside>
       <main></main>
       <div class="ad"></div>
